--- a/new2.html
+++ b/new2.html
@@ -20,8 +20,10 @@
 </style>
   
 </head>
-<body style="background:url(b31.png)">
-<section class="topbar">
+<body style="background:url(b31.png);position:relative;min-height:100%;top:0px;">
+<div class="topnav">
+
+<div class="topbar">
 <div class="container-fluid">
 <div class="row" > 
 	<div class="col-md-6">
@@ -41,8 +43,8 @@
 	</div>
 </div>
 </div>
-</section>
-<nav   class="navbar navbar-default navbar-fixed-top">
+</div>
+<nav   class="navbar navbar-default">
 	<div class="container-fluid">
 	<div class="row">
 	<div class="col-md-4 col-xs-4">
@@ -102,9 +104,9 @@
 	</div>
 </nav>
 
-
+</div>
 	
-<section class="body-wrap" style="width:100%;margin-top:170px;position:absolute;">
+<section class="body-wrap" style="width:100%;margin-top:180px;position:absolute;">
 	<div class="container-fluid">
 	<div class="row">
 	
